# q-transformers

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.minimal  LICENSE  Makefile  README.md  pytest.ini  requirements.txt  test_basic_functionality.py
benchmarks/: README.md  run_acceleration_benchmarks.py  run_full_evaluation_suite.py  run_phase0_toy.py  run_phase1_comprehensive.py  run_phase2_comprehensive.py  run_phase3_comprehensive.py  run_quick_benchmarks.py  run_sampling_benchmarks.py
docs/: advanced-features.md  core-architecture.md  development-roadmap.md  mathematical-foundations.md  phase0-mathematical-foundations.md  phase1-achievements.md  phase2-roadmap.md  phase3-achievements.md  production-deployment.md  research_paper_draft.md
examples/: README.md  deployment_example.py  quantum_training_example.py
python/: pyproject.toml
python/qsim/: __init__.py  quantum_simulator.py
python/qtransformers/: __init__.py  advanced_sampling.py  attention.py  cuda_kernels.py  deployment.py  distributed_quantum.py  memory_profiler.py  nlp_benchmarks.py  qiskit_backend.py  quantum_error_mitigation.py  quantum_supremacy.py  quantum_transformer_blocks.py  training_infrastructure.py  visualization.py
python/tests/: test_attention.py  test_multihead_attention.py  test_qsim.py  test_rust_backends.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs  tests.rs
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_basic_functionality.py  test_minimal_standalone.py
tests/python/: test_attention.py  test_multihead_attention.py  test_qsim.py  test_rust_backends.py
tests/rust/: __init__.py
