[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtransformers"
version = "0.1.0"
description = "Quantum-inspired attention mechanisms for Transformers"
authors = [{ name = "Lokesh Kumar", email = "lkumar94@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]
full = [
    "transformers>=4.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "psutil>=5.9.0",
]
quantum = [
    "qiskit>=0.45.0",
    "qiskit-aer>=0.12.0",
    "pennylane>=0.32.0",
    "pennylane-lightning>=0.32.0",
]
all = ["qtransformers[full,quantum]"]

[project.urls]
Homepage = "https://github.com/kumarlokesh/q-transformers"
Repository = "https://github.com/kumarlokesh/q-transformers"
Documentation = "https://q-transformers.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["qtransformers*", "qsim*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
