[package]
name = "qtransformers-core"
version = "0.1.0"
edition = "2021"
authors = ["Lokesh Kumar <lkumar94@gmail.com>"]
description = "High-performance quantum-inspired attention kernels"
license = "MIT"

[lib]
name = "qtransformers_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15"
rayon = "1.7"
pyo3 = { version = "0.20", features = ["extension-module", "auto-initialize"] }
numpy = "0.20"
rand = "0.8"

[build-dependencies]
pyo3-build-config = "0.20"
